# midas-converter

./: Cargo.toml  README.md  README.org
src/: bitmasks.rs  diagnostics.rs  main.rs  mdpp16_scp.rs  mdpp_bank.rs  midas_structs.rs  module_config.rs  sis3820.rs  sort.rs  v1730_bank.rs  v785_bank.rs  write_data.rs
