[package]
name = "midas-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midasio = "0.4.1"
itertools = "*"
clap = { version = "4.1.4", features = ["derive"] }
toml = "*"
serde = "*"
serde_derive = "*"
indicatif = "0.17.3"
polars = { version = "0.28.0", features = ["parquet", "lazy", "streaming", "ipc", "dtype-full"] }
smartstring = "*"