[package]
name = "midas-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midasio = "0.4.1"
itertools = "*"
clap = { version = "4.1.4", features = ["derive"] }
toml = "*"
serde = "*"
serde_derive = "*"
indicatif = "0.17.3"
hashbrown = { version = "0.14.5", features = ["raw"] }
polars = { version = "0.35.4", features = ["parquet", "lazy", "streaming", "ipc", "dtype-full", "csv"] }
smartstring = "*"
